fix the whitespace character's display is too wide

--- a/assets/themes/tom/css/screen.css
+++ b/assets/themes/tom/css/screen.css
@@ -19,7 +19,7 @@ body {
   background-color: white;
   font: 13.34px helvetica, arial, clean, sans-serif;
   *font-size: small;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -80,7 +80,7 @@ ul.posts {
 
 .site {
   font-size: 110%;
-  text-align: justify;
+  /*text-align: justify;*/
   width: 45em;
   margin: 3em auto 2em auto;
   line-height: 1.5em;
@@ -158,7 +158,11 @@ ul.posts {
     border: 1px solid #ddd;
     background-color: #eef;
     padding: 0 .4em;
-	word-wrap:break-word;
+	white-space: pre-wrap; /* CSS-3 */ 
+	white-space: -moz-pre-wrap; /* Mozilla, since 1999 */ 
+	white-space: -pre-wrap; /* Opera 4-6 */ 
+	white-space: -o-pre-wrap; /* Opera 7 */ 
+	word-wrap: break-word; /* Internet Explorer 5.5+ */ 
   }
 
   #post ul,
